working on sign in with email

--- a/.env
+++ b/.env
@@ -1,3 +1,16 @@
 SECRET="secret123"
-GOOGLE_CLIENT_ID="308392624640-ln43bt6786td2pscepn43s3h6dnpa430.apps.googleusercontent.com"
-GOOGLE_CLIENT_SECRET="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"
+# GOOGLE_CLIENT_ID="308392624640-ln43bt6786td2pscepn43s3h6dnpa430.apps.googleusercontent.com"
+# GOOGLE_CLIENT_SECRET="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"
+
+GOOGLE_CLIENT_ID="308392624640-u2j1njv6f7j48eu4g6ul964tgptkp0qh.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="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"
+
+# This was inserted by `prisma init`:
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+
+DATABASE_URL="postgres://postgres.yqkwrclsnmcmxygcxeij:Y&-4xRhe5J8aZYf@aws-0-us-west-1.pooler.supabase.com:5432/postgres"
+
