--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.5.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.11.0",
+    "bcrypt": "^5.1.1",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
     "react": "^18",
@@ -16,6 +20,7 @@
     "react-google-button": "^0.7.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
