added auth with magic links

--- a/.env
+++ b/.env
@@ -12,5 +12,12 @@ GOOGLE_CLIENT_SECRET="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"
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
+
+EMAIL_SERVER_USER=resend
+EMAIL_SERVER_PASSWORD=re_hAJzbS1k_FCNZjWHRHJ634NLsJ1XFoDVU
+EMAIL_SERVER_HOST=smtp.resend.com
+EMAIL_SERVER_PORT=465
+EMAIL_FROM=oboarding@resend.dev
+
 DATABASE_URL="postgres://postgres.yqkwrclsnmcmxygcxeij:Y&-4xRhe5J8aZYf@aws-0-us-west-1.pooler.supabase.com:5432/postgres"
 
